# C_like_compiler

./: CMakeLists.txt  README.md
codegen/: IRconsturctor.h  ast.cpp  ast.h  ast1.h  codegen.cpp
compile/: compile.cpp  compile.h
config/: CMakeLists.txt  config.cpp  config.h  grammar.bg  regular.br
grammar/: ASTConstructor.cpp  ASTConstructor.h  LL1.cpp  LL1.h
lexical/: CMakeLists.txt  regularEngine.cpp  regularEngine.h  tokenize.h  tokenizer.cpp  tokenizer.h
test/: CMakeLists.txt  func.b  test_config.cpp  test_firstset.cpp  test_rawToken.cpp  test_thomson.cpp
